corrected spacing and moved footer to bottom

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,9 @@
   margin: 0 auto;
   background: white;
   padding: 30px;
-  margin: 60px 15px;
+
   border-radius: 10px;
-  box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.3);
 }
 body {
   background-color: #f9f7fe;
@@ -14,13 +14,11 @@ h1 {
   text-align: center;
   font-family: sans-serif;
 }
-footer {
-  text-align: center;
-}
+
 h2 {
   font-size: 28px;
   font-family: sans-serif;
-  margin: 5px;
+  margin: 0 0 5px;
 }
 select {
   display: block;
@@ -34,12 +32,28 @@ select {
   margin: 20px 0;
   justify-content: space-between;
   font-family: sans-serif;
+  padding: 20px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.3);
+}
+
+.cities:last-of-type {
+  border-bottom: none;
 }
 .date {
   opacity: 0.7;
 }
 .time {
-  font-size: 36px;
+  font-size: 48px;
   font-weight: bold;
-  line-height: 2;
+  line-height: 1;
+}
+.time small {
+  font-size: 24px;
+  vertical-align: middle;
+  line-height: 48px;
+}
+footer {
+  text-align: center;
+  color: rgba(0, 0, 0, 0.5);
+  margin-top: 20px;
 }
